--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-	<title></title>
+    <title></title>
 </head>
+
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-<canvas id="chart" width="400" height="400"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+    <div >
+
+    </div>
+    <canvas id="chart" width="400px" height="400px"></canvas>
+
+    <script>
+        let context = document.getElementById("chart").getContext("2d");
+        let chart = new Chart(context,{
+            type: "line",
+            data: {
+                labels:["1","2","3"],
+                datasets:[{
+                    label: "test",
+                    data: [1,2,5]
+                }],
+            }
+        });
+    </script>
 
 </body>
 </html>
