--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -23,21 +24,11 @@
     </div>
 
     <script>
-        let context = document.getElementById("chart").getContext("2d");
-        let chart = new Chart(context, {
-            type: "line",
-            data: {
-                labels: ["1", "2", "3"],
-                datasets: [{
-                    label: "test",
-                    data: [1, 2, 5]
-                }],
-            }
-        });
-
-        let iteration = 1000000;
+        //        =============================================
+        //        Add your algorithms here
+        //        =============================================
         let givenArr = [1, 2, 6, 3, 7, 3, 45];
-
+        let name = "Sort analysis"; // enter graph title
         function recursiveSort(arr) {
             for (var index = 0; index < arr.length - 1; index++) {
                 if (arr[index] > arr[index + 1]) {
@@ -48,18 +39,45 @@
             }
         }
 
-        function analyzer(iter) {
+        function sort(arr) {
+            arr.sort(function(a, b) {
+                return a - b
+            });
+            return arr;
+        }
+        //        =============================================
+
+        function analyzer(iteration, arr, func) {
             let start = Date.now();
             for (let i = 0; i < iteration; i++) {
-                recursiveSort(givenArr);
+                func(arr);
             }
             let end = Date.now();
-            alert(end - start);
-
+            return end - start;
         }
 
-        analyzer(iteration);
+        function createData(num, arr, i) {
+            let dataArr = [];
+            for (i; i >= 1; i--) {
+                dataArr.push(analyzer(num / i, arr, recursiveSort))
+            }
+            return dataArr
+        }
+
+        console.log(createData(1000000, givenArr, 20))
+        let context = document.getElementById("chart").getContext("2d");
+        let chart = new Chart(context, {
+            type: "line",
+            data: {
+                labels: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20],
+                datasets: [{
+                    label: name,
+                    data: createData(1000000, givenArr, 20)
+                }],
+            }
+        });
     </script>
 
 </body>
+
 </html>
