--- a/index.html
+++ b/index.html
@@ -39,6 +39,56 @@
             }
         }
 
+        // Insertion sort
+        function insertionSort(unsortedList) {
+            var len = unsortedList.length;
+            for (var i = 0; i < len; i++) {
+                var tmp = unsortedList[i];
+                for (var j = i - 1; j >= 0 && (unsortedList[j] > tmp); j--) {
+                    unsortedList[j + 1] = unsortedList[j];
+                }
+                unsortedList[j + 1] = tmp;
+            }
+            return unsortedList;
+        }
+        //end
+
+        function quicksortBasic(array) {
+            if (array.length < 2) {
+                return array;
+            }
+
+            var pivot = array[0];
+            var lesser = [];
+            var greater = [];
+
+            for (var i = 1; i < array.length; i++) {
+                if (array[i] < pivot) {
+                    lesser.push(array[i]);
+                } else {
+                    greater.push(array[i]);
+                }
+            }
+
+            return quicksortBasic(lesser).concat(pivot, quicksortBasic(greater));
+        }
+
+        function mergeSort(arr) {
+            if (arr.length < 2) return arr;
+            var mid = Math.floor(arr.length / 2);
+            var subLeft = mergeSort(arr.slice(0, mid));
+            var subRight = mergeSort(arr.slice(mid));
+
+            return merge(subLeft, subRight);
+        }
+
+        function merge(a, b) {
+            var result = [];
+            while (a.length > 0 && b.length > 0)
+                result.push(a[0] < b[0] ? a.shift() : b.shift());
+            return result.concat(a.length ? a : b);
+        }
+
         function sort(arr) {
             arr.sort(function(a, b) {
                 return a - b
@@ -64,15 +114,15 @@
             return dataArr
         }
 
-        console.log(createData(1000000, givenArr, 20))
+        console.log(createData(100000000, givenArr, 20))
         let context = document.getElementById("chart").getContext("2d");
         let chart = new Chart(context, {
             type: "line",
             data: {
-                labels: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20],
+                labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20],
                 datasets: [{
                     label: name,
-                    data: createData(1000000, givenArr, 20)
+                    data: createData(100000000, givenArr, 20)
                 }],
             }
         });
