--- a/index.html
+++ b/index.html
@@ -114,16 +114,38 @@
             return dataArr
         }
 
-        console.log(createData(1000000, givenArr, 20, recursiveSort))
+        function createLabels(num) {
+            let arr = [];
+            for(var i = 1; i <= num; i++) {
+                arr.push(i);
+            }
+            return arr;
+        }
+
         let context = document.getElementById("chart").getContext("2d");
         let chart = new Chart(context, {
             type: "line",
             data: {
-                labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20],
+                labels: createLabels(20),
                 datasets: [{
-                    label: name,
+                    label: "recursive bubble sort",
+                    fill: false,
+                    backgroundColor: "red",
+					borderColor: "red",
                     data: createData(1000000, givenArr, 20, recursiveSort)
-                }],
+                }, {
+                    label: "insertion sort",
+                    fill: false,
+                    backgroundColor: "blue",
+					borderColor: "blue",
+                    data: createData(1000000, givenArr, 20, insertionSort)
+                }, {
+                   label: "default sort",
+                    fill: false,
+                    backgroundColor: "green",
+					borderColor: "green",
+                    data: createData(1000000, givenArr, 20, sort)
+                }]
             }
         });
 
